force-app/main/default/objects/OCI_Commerce_API__c/OCI_Commerce_API__c.object-meta.xml
<CustomObject>
    <label>OCI Commerce API</label>
    <nameField>
        <label>OCI Commerce API Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OCI Commerce API</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>