force-app/main/default/objects/OCI_Commerce_API__c/fields/deltaToken__c.field-meta.xml
<CustomField>
    <fullName>deltaToken__c</fullName>
    <description
  >The token returned when fetching availability. By passing this token, a delta since the previous fetch is returned.
If empty, the full availability is returned.</description>
    <inlineHelpText
  >The token returned when fetching availability. By passing this token, a delta since the previous fetch is returned.
If empty, the full availability is returned.</inlineHelpText>
    <label>deltaToken</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>