force-app/main/default/objects/OCI_Commerce_API__c/fields/exportID__c.field-meta.xml
<CustomField>
    <fullName>exportID__c</fullName>
    <description>ID to retrieve the requested availability export from OCI. If empty or expired, it will be set by an export request.</description>
    <inlineHelpText>ID to retrieve the requested availability export from OCI. If empty or expired, it will be set by an export request.</inlineHelpText>
    <label>exportID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>