force-app/main/default/objects/OCI_Commerce_API__c/fields/organisationID__c.field-meta.xml
<CustomField>
    <fullName>organisationID__c</fullName>
    <description>The organisationId of this org that needs to be passed to OCI. Can&apos;t be fetched programmatically directly, but is available as &apos;TenantId&apos; at /lightning/setup/OmniChannelInventory/home</description>
    <inlineHelpText>The organisationId of this org that needs to be passed to OCI. Can&apos;t be fetched programmatically directly, but is available as &apos;TenantId&apos; at /lightning/setup/OmniChannelInventory/home</inlineHelpText>
    <label>organisationID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>